@@ -3,13 +3,14 @@ require 'active_shipping/shipping/carriers/ups'
 require 'active_shipping/shipping/carriers/usps'
 require 'active_shipping/shipping/carriers/fedex'
 require 'active_shipping/shipping/carriers/shipwire'
+require 'active_shipping/shipping/carriers/kunaki'
 
 module ActiveMerchant
   module Shipping
     module Carriers
       class <<self
         def all
-          [BogusCarrier, UPS, USPS, FedEx, Shipwire]
+          [BogusCarrier, UPS, USPS, FedEx, Shipwire, Kunaki]
         end
       end
     end
