@@ -1,3 +1,4 @@
+* Add support Kunaki rating service [cody]
 * Require active_support instead of activesupport to avoid deprecation warning in Rails 2.3.5 [cody]
 * Remove ftools for Rails 1.9 compatibility and remove xml logging, as logging is now included in the connection [cody]
 * Update connection code from ActiveMerchant [cody]
